Adding Desktop notifications. Signed-off-by: Martin Matysiak <kaktus621@gmail.com>

--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,7 @@
   },
   "permissions": [
     "contextMenus"
+    , "notifications"
     , "tabs"
     , "https://accounts.google.com/o/oauth2/token"
     , "http://www.google.com/robots.txt"
