Moving file upload to the background page. Signed-off-by: Martin Matysiak <kaktus621@gmail.com>

--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,10 @@
     }
   ],
   "background": {
-	"page": "background.html"
+    "scripts": [
+      "oauth2/oauth2.js",
+      "js/background.js"
+    ]
   },
   "permissions": [
     "contextMenus"
