--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
     "16": "icon_16.png",
     "48": "icon_48.png",
     "128": "icon_128.png"
-  }
- , "content_scripts": [
+  },
+  "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
       "js": ["js/injectDriveUploader.js"]
