--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,8 @@
   "description": "__MSG_ext_description__",
   "icons": {
     "16": "drive16.png", // used for context menu item
-    "48": "icon_48.png",
-    "128": "icon_128.png"
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
   "content_scripts": [
     {
