--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "default_locale": "en",
   "description": "__MSG_ext_description__",
   "icons": {
-    "16": "drive16.png", // used for context menu item
+    "16": "drive16.png",
     "48": "icon48.png",
     "128": "icon128.png"
   },
